--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@mdx-js/react": "^1.6.21",
     "acorn": "^8.7.1",
     "clsx": "^1.1.1",
+    "lottie-react": "^2.3.1",
+    "lottie-web": "^5.9.6",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-github-btn": "^1.2.1",
-    "react-youtube": "^9.0.3"
+    "react-youtube": "^9.0.3",
+    "three": "^0.146.0"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.1.0",
