--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "version": "./scripts/version.sh"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-rc.1",
-    "@docusaurus/preset-classic": "^2.0.0-rc.1",
+    "@docusaurus/core": "^2.0.0",
+    "@docusaurus/preset-classic": "^2.0.0",
+    "@docusaurus/plugin-content-docs": "2.2.0",
     "@mdx-js/react": "^1.6.21",
     "acorn": "^8.7.1",
     "clsx": "^1.1.1",
